# bfucom

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  hello.bf
Bfucom/: Bfucom.cpp  Bfucom.h  CMakeLists.txt
